@@ -1,0 +1,8 @@
+<:args foo=nobar:>
+<HTML><BODY><H1>
+<:if `foo=='bar'`:>
+  Redirect with queryargs succeeded!
+<:else:>
+  Redirect with queryargs failed!
+<:/if:>
+</H1></BODY></HTML>
