@@ -1,0 +1,4 @@
+<:compargs user:>
+<P>So, you are <:val `user`:>, are you?  Well, here is what I think of that.  
+I think you are a dirty, low-down scoundrel, and I think I like you that way.
+When do you get off work?  </P>
