@@ -1,0 +1,24 @@
+<!DOCTYPE HTML PUBLIC "-//W3C//DTD HTML 4.01 Transitional//EN">
+<html>
+  <head>
+    <title>Remote Data Component Test Number One</title>
+  </head>
+
+  <body>
+    <h1>Remote Data Component Test Number One</h1>
+
+   <h2>Local call</h2>
+    <:datacomp thang comp/regcomp2.pydcmp:>
+    <:val `thang`:>
+   <h2>Remote call</h2>
+    <:datacomp thang2 "swrc://localhost/test/remote/comp/regcomp2.pydcmp":>
+    <:val `thang2`:>
+
+    <hr>
+<!-- Created: Tue Oct 30 19:01:56 EST 2001 -->
+<!-- hhmts start -->
+Last modified: Tue Oct 30 22:15:13 EST 2001
+<!-- hhmts end -->
+  </body>
+</html>
+h
